# Que

./: Config.env  README.md  Run me visual.bat  Run me.bat  cofig.env  config.env  pyproject.toml  que.py  que.txt  quevisual.py  requirements.txt
docs/: gui.html  index.html  que.html  search.js
que/: Config.env  Run me.bat  cards.env  gui.py  que.py  que.txt  requirements.txt  toendorse.txt
